Closed Bug 1964219 Opened 20 days ago Closed 15 days ago

Jittery canvas rendering when gfx.direct2d.disabled = false

Categories

(Core :: Graphics: Canvas2D, defect)

Firefox 139
x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox138 --- unaffected
firefox139 --- fixed
firefox140 --- fixed

People

(Reporter: 6k64x4ma, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file about_support.json

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:139.0) Gecko/20100101 Firefox/139.0

Steps to reproduce:

  1. Set "gfx.direct2d.disabled" to false and restart Firefox.
  2. Go to https://keyou.github.io/CanvasMark/ and run the benchmark.
  3. Observe the first test.

Actual results:

The movement of the asteroids becomes unstable compared to when running on Firefox 138.

Expected results:

The asteroids moves smoothly.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d1cfe436879aa5f39e94e0781d10f2f792d30d9a&tochange=67917707ff5e57cd60e3f51c2799757a3a469c68

Keywords: regression
OS: Unspecified → Windows 10
Regressed by: 1959856
Hardware: Unspecified → x86_64

:sotaro, since you are the author of the regressor, bug 1959856, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(sotaro.ikeda.g)

Will also NI Lee, since he reviewed the regressor and is also an SME for Direct2D.

Flags: needinfo?(lsalzman)
Flags: needinfo?(lsalzman)
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
See Also: → 1960950
See Also: → 1965157
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cbd1386088f0 Fix DXGITextureHostD3D11 Fence handling r=lsalzman
Blocks: 1965157
Status: UNCONFIRMED → RESOLVED
Closed: 15 days ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch

Set release status flags based on info from the regressing bug 1959856

The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(sotaro.ikeda.g)

Hi 6k64x4ma, can you check if the problem is addressed with latest Nightly?

Flags: needinfo?(6k64x4ma)

The issue did not occur with build ID 20250508215032, thanks.

Flags: needinfo?(6k64x4ma)

Great! Thank you.

Flags: needinfo?(sotaro.ikeda.g)

Comment on attachment 9486203 [details]
Bug 1964219 - Fix DXGITextureHostD3D11 Fence handling

Beta/Release Uplift Approval Request

  • User impact if declined/Reason for urgency: Canvas rendering causes jittering when pref gfx.direct2d.disabled = false on Windows.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It is not used with default pref. And with the change, the fence handling becomes same to SharedSurface_ANGLEShareHandle::ProducerReleaseImpl() that is already used with WebGL.
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9486203 - Flags: approval-mozilla-beta?

Comment on attachment 9486203 [details]
Bug 1964219 - Fix DXGITextureHostD3D11 Fence handling

Approved for 139.0b7

Attachment #9486203 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Regressions: 1966082
Regressions: 1966626
No longer regressions: 1966626
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: