Bug 1964219 - Fix DXGITextureHostD3D11 Fence handling r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D248371